--- a/shopping_cart/templates/generators/item_group.html
+++ b/shopping_cart/templates/generators/item_group.html
@@ -1,42 +1,46 @@
-{% extends base_template %}
+{% block title %} {{ title }} {% endblock %}
+
+{% block header %}<h2>{{ title }}</h2>{% endblock %}
 
 {% block content %}
-{% include 'templates/includes/product_search_box.html' %}
-{% include 'templates/includes/product_breadcrumbs.html' %}
-<div class="container content">
-	{% if slideshow %}<!-- slideshow -->
-	{% include "templates/includes/slideshow.html" %}
-	{% endif %}
-	{% if description %}<!-- description -->
-	<div itemprop="description">{{ description or ""}}</div>
-	{% else %}
-	<h3>{{ name }}</h3>
-	{% endif %}
-</div>
-<div class="container content">
-	{% if sub_groups %}
-	<hr />
-	<div class="row">
-	{% for d in sub_groups %}
-		<div class="col-md-4">
-			<a href="{{ d.page_name }}">{{ d.name }} ({{ d.count }})</a>
-		</div>
-	{% endfor %}
-	</div>
-	<hr />
-	{% endif %}
-	{% if items %}
-	<div id="search-list" class="row">
-		{% for item in items %}
-			{{ item }}
-		{% endfor %}
-	</div>
-		{% if (items|length)==100 %}
-			<div class="alert alert-info info">Showing top 100 items.</div>
+<div class="item-group-content">
+	{% include 'templates/includes/product_search_box.html' %}
+	{% include 'templates/includes/product_breadcrumbs.html' %}
+	<div>
+		{% if slideshow %}<!-- slideshow -->
+		{% include "templates/includes/slideshow.html" %}
 		{% endif %}
-	{% else %}
-		<div class="alert alert-warning">No items listed.</div>
-	{% endif %}
+		{% if description %}<!-- description -->
+		<div itemprop="description">{{ description or ""}}</div>
+		{% else %}
+		<h3>{{ name }}</h3>
+		{% endif %}
+	</div>
+	<div>
+		{% if sub_groups %}
+		<hr />
+		<div class="row">
+		{% for d in sub_groups %}
+			<div class="col-md-4">
+				<a href="{{ d.page_name }}">{{ d.name }} ({{ d.count }})</a>
+			</div>
+		{% endfor %}
+		</div>
+		<hr />
+		{% endif %}
+		{% if items %}
+		<div id="search-list" class="row">
+			{% for item in items %}
+				{{ item }}
+			{% endfor %}
+		</div>
+			{% if (items|length)==100 %}
+				<div class="alert alert-info info">Showing top 100 items.</div>
+			{% endif %}
+		{% else %}
+			<div class="alert alert-warning">No items listed.</div>
+		{% endif %}
+	</div>	
 </div>
 <script>
 $(function() {
@@ -50,3 +54,5 @@ $(function() {
 </script>
 
 {% endblock %}
+
+{% block sidebar %}{% include "templates/includes/sidebar.html" %}{% endblock %}
