Fixes for template pages

--- a/shopping_cart/templates/generators/item_group.html
+++ b/shopping_cart/templates/generators/item_group.html
@@ -21,7 +21,7 @@
 		<hr />
 		<div class="row">
 		{% for d in sub_groups %}
-			<div class="col-md-4">
+			<div class="col-sm-4">
 				<a href="{{ d.page_name }}">{{ d.name }} ({{ d.count }})</a>
 			</div>
 		{% endfor %}
