--- a/shopping_cart/templates/includes/product_in_grid.html
+++ b/shopping_cart/templates/includes/product_in_grid.html
@@ -1,4 +1,4 @@
-<div class="col-md-3">
+<div class="col-sm-3">
 	<div style="height: 120px; overflow: hidden;">
 		<a href="{{ page_name }}">
 		{%- if website_image -%}
