--- a/shopping_cart/templates/includes/sales_transactions.html
+++ b/shopping_cart/templates/includes/sales_transactions.html
@@ -1,6 +1,3 @@
-{% extends "templates/includes/transactions.html" %}
-
-{% block javascript -%}
 <script>
 $(document).ready(function() {
 	global_number_format = "{{ global_number_format }}";
@@ -9,7 +6,7 @@ $(document).ready(function() {
 });
 </script>
 
-{{ super() }}
+{% include "templates/includes/transactions.html" %}
 
 <script>
 	var render = function(doc) {
@@ -29,4 +26,3 @@ $(document).ready(function() {
 			</a>', doc)).appendTo($list);
 	};
 </script>
-{%- endblock %}
