--- a/shopping_cart/templates/pages/orders.html
+++ b/shopping_cart/templates/pages/orders.html
@@ -1,1 +1,7 @@
-{% extends "templates/sales_transactions.html" %}
+{% block title %} {{ title }} {% endblock %}
+
+{% block header %}<h2>{{ title }}</h2>{% endblock %}
+
+{% block content %}{% include "templates/includes/sales_transactions.html" %}{% endblock %}
+
+{% block sidebar %}{% include "templates/includes/sidebar.html" %}{% endblock %}
