--- a/shopping_cart/templates/pages/ticket.html
+++ b/shopping_cart/templates/pages/ticket.html
@@ -1,40 +1,39 @@
-{% extends base_template %}
+{% block title %} {{ title }} {% endblock %}
 
-{% set title=doc.name %}
+{% block header %}<h2><i class="icon-ticket icon-fixed-width"></i> {{ title }}</h2>{% endblock %}
 
+{% block content %}
 {% set status_label = {
 	"Open": "label-success",
 	"To Reply": "label-danger",
 	"Closed": "label-default"
 } %}
 
-{% block content %}
-<div class="container content">
+<div class="ticket-content">
     <ul class="breadcrumb">
     	<li><a href="index">Home</a></li>
     	<li><a href="tickets">My Tickets</a></li>
-    	<li class="active"><i class="icon-ticket icon-fixed-width"></i> {{ doc.name }}</li>
+    	<li class="active"><i class="icon-ticket icon-fixed-width"></i> {{ bean.doc.name }}</li>
     </ul>
-	<h3><i class="icon-ticket icon-fixed-width"></i> {{ doc.name }}</h3>
-	{% if doc.name == "Not Allowed" -%}
+	{% if not bean -%}
 		<script>ask_to_login();</script>
 	{% else %}
 	<hr>
-	{%- if doc.status -%}
-	{% if doc.status == "Waiting for Customer" -%}
+	{%- if bean.doc.status -%}
+	{% if bean.doc.status == "Waiting for Customer" -%}
 		{% set status = "To Reply" %}
 	{% else %}
-		{% set status = doc.status %}
+		{% set status = bean.doc.status %}
 	{%- endif -%}
 	<div class="row">
 		<div class="col-md-2" style="margin-bottom: 7px;">
 			<span class="label {{ status_label.get(status) or 'label-default' }}">{{ status }}</span>
 		</div>
 		<div class="col-md-8">
-			<div class="row col-md-12">{{ doc.subject }}</div>
+			<div class="row col-md-12">{{ bean.doc.subject }}</div>
 		</div>
 		<div class="col-md-2">
-			<span class="text-muted pull-right">{{ utils.formatdate(doc.creation) }}</span>
+			<span class="text-muted pull-right">{{ webnotes.utils.formatdate(bean.doc.creation) }}</span>
 		</div>
 	</div>
 	<div class="row">
@@ -48,16 +47,16 @@
 	</div>
 	<p id="ticket-alert" class="alert alert-danger" 
 		style="display: none;">&nbsp;</p>
-	{%- if doclist.get({"doctype":"Communication"}) -%}
+	{%- if bean.doclist.get({"doctype":"Communication"}) -%}
 	<div>
 		<table class="table table-bordered table-striped" id="ticket-thread">
 			<tbody>
 				{%- for comm in 
-					(doclist.get({"doctype":"Communication"})|sort(reverse=True, attribute="creation")) %}
+					(bean.doclist.get({"doctype":"Communication"})|sort(reverse=True, attribute="creation")) %}
 				<tr>
 					<td>
 					<h5 style="text-transform: none">
-						{{ comm.sender }} on {{ utils.formatdate(comm.creation) }}</h5>
+						{{ comm.sender }} on {{ webnotes.utils.formatdate(comm.creation) }}</h5>
 					<hr>
 					<p>{{ webnotes.utils.is_html(comm.content) and comm.content or
 						comm.content.replace("\n", "<br>")}}</p>
@@ -73,9 +72,7 @@
 	{%- endif -%}
 	{% endif -%}
 </div>
-{% endblock %}
 
-{% block javascript %}
 <script>
 $(document).ready(function() {
 	$("#ticket-reply").on("click", function() {
@@ -99,7 +96,7 @@ $(document).ready(function() {
 				type: "POST",
 				method: "shopping_cart.templates.pages.ticket.add_reply",
 				btn: this,
-				args: { ticket: "{{ doc.name }}", message: reply },
+				args: { ticket: "{{ bean.doc.name }}", message: reply },
 				callback: function(r) {
 					if(r.exc) {
 						msgprint(r._server_messages 
