--- a/shopping_cart/templates/includes/sales_transactions.html
+++ b/shopping_cart/templates/includes/sales_transactions.html
@@ -2,7 +2,7 @@
 $(document).ready(function() {
 	global_number_format = "{{ global_number_format }}";
 	currency = "{{ currency }}";
-	wn.currency_symbols = {{ currency_symbols }};
+	frappe.currency_symbols = {{ currency_symbols }};
 });
 </script>
 
