--- a/shopping_cart/templates/generators/item.html
+++ b/shopping_cart/templates/generators/item.html
@@ -72,9 +72,9 @@
 
 	$(function() {
 		if(window.logged_in && getCookie("system_user")==="yes") {
-			wn.has_permission("Item", "{{ name }}", "write", function(r) {
-				wn.require("assets/webnotes/js/wn/website/editable.js");
-				wn.make_editable($('[itemprop="description"]'), "Item", "{{ name }}", "web_long_description");
+			frappe.has_permission("Item", "{{ name }}", "write", function(r) {
+				frappe.require("assets/frappe/js/frappe/website/editable.js");
+				frappe.make_editable($('[itemprop="description"]'), "Item", "{{ name }}", "web_long_description");
 			});
 		}
 	});
