--- a/shopping_cart/templates/includes/sale.html
+++ b/shopping_cart/templates/includes/sale.html
@@ -15,7 +15,7 @@
 			{% if bean.doc.status -%}{{ bean.doc.status }}{%- endif %}
 		</div>
 		<div class="col-xs-6">
-			<span class="pull-right">{{ webnotes.utils.formatdate(bean.doc.posting_date or bean.doc.transaction_date) }}</span>
+			<span class="pull-right">{{ frappe.utils.formatdate(bean.doc.posting_date or bean.doc.transaction_date) }}</span>
 		</div>
 	</div>
 	<br>
@@ -39,8 +39,8 @@
 					<td style="width: 37%;">{{ row.description }}</td>
 					<td style="width: 5%; text-align: right;">{{ row.qty }}</td>
 					<td style="width: 5%;">{{ row.stock_uom }}</td>
-					<td style="width: 15%; text-align: right;">{{ webnotes.utils.fmt_money(row.rate, currency=bean.doc.currency) }}</td>
-					<td style="width: 15%; text-align: right;">{{ webnotes.utils.fmt_money(row.amount, currency=bean.doc.currency) }}</td>
+					<td style="width: 15%; text-align: right;">{{ frappe.utils.fmt_money(row.rate, currency=bean.doc.currency) }}</td>
+					<td style="width: 15%; text-align: right;">{{ frappe.utils.fmt_money(row.amount, currency=bean.doc.currency) }}</td>
 				</tr>
 				{% endfor -%}
 			</tbody>
@@ -55,24 +55,24 @@
 			<tr>
 				<td>Net Total</td>
 				<td width=40% style="text-align: right;">{{
-					webnotes.utils.fmt_money(bean.doc.net_total/bean.doc.conversion_rate, currency=bean.doc.currency)
+					frappe.utils.fmt_money(bean.doc.net_total/bean.doc.conversion_rate, currency=bean.doc.currency)
 				}}</td>
 			</tr>
 			{%- for charge in bean.doclist.get({"doctype":"Sales Taxes and Charges"}) -%}
 			{%- if not charge.included_in_print_rate -%}
 			<tr>
 				<td>{{ charge.description }}</td>
-				<td style="text-align: right;">{{ webnotes.utils.fmt_money(charge.tax_amount / bean.doc.conversion_rate, currency=bean.doc.currency) }}</td>
+				<td style="text-align: right;">{{ frappe.utils.fmt_money(charge.tax_amount / bean.doc.conversion_rate, currency=bean.doc.currency) }}</td>
 			</tr>
 			{%- endif -%}
 			{%- endfor -%}
 			<tr>
 				<td>Grand Total</td>
-				<td style="text-align: right;">{{ webnotes.utils.fmt_money(bean.doc.grand_total_export, currency=bean.doc.currency) }}</td>
+				<td style="text-align: right;">{{ frappe.utils.fmt_money(bean.doc.grand_total_export, currency=bean.doc.currency) }}</td>
 			</tr>
 			<tr style='font-weight: bold'>
 				<td>Rounded Total</td>
-				<td style="text-align: right;">{{ webnotes.utils.fmt_money(bean.doc.rounded_total_export, currency=bean.doc.currency) }}</td>
+				<td style="text-align: right;">{{ frappe.utils.fmt_money(bean.doc.rounded_total_export, currency=bean.doc.currency) }}</td>
 			</tr>
 		</tbody>
 		</table>	
