--- a/shopping_cart/templates/pages/user.html
+++ b/shopping_cart/templates/pages/user.html
@@ -3,7 +3,7 @@
 {% block header %}<h2>My Profile</h2>{% endblock %}
 
 {% block content %}
-<div class="profile-content">
+<div class="user-content">
     <ul class="breadcrumb">
     	<li><a href="index">Home</a></li>
     	<li class="active"><i class="icon-user icon-fixed-width"></i> My Profile</li>
@@ -26,15 +26,15 @@
 			<label>Phone</label>
 			<input class="form-control" type="text" id="phone" placeholder="Phone" value="{{ phone }}">
 		</fieldset>
-		<button id="update_profile" type="submit" class="btn btn-default">Update</button>
+		<button id="update_user" type="submit" class="btn btn-default">Update</button>
 	</form>
 </div>
 <script>
 $(document).ready(function() {
 	$("#fullname").val(getCookie("full_name") || "");
-	$("#update_profile").click(function() {
+	$("#update_user").click(function() {
 		frappe.call({
-			method: "shopping_cart.templates.pages.profile.update_profile",
+			method: "shopping_cart.templates.pages.user.update_user",
 			type: "POST",
 			args: {
 				fullname: $("#fullname").val(),
