--- a/shopping_cart/templates/pages/ticket.html
+++ b/shopping_cart/templates/pages/ticket.html
@@ -13,27 +13,27 @@
     <ul class="breadcrumb">
     	<li><a href="index">Home</a></li>
     	<li><a href="tickets">My Tickets</a></li>
-    	<li class="active"><i class="icon-ticket icon-fixed-width"></i> {{ bean.doc.name }}</li>
+    	<li class="active"><i class="icon-ticket icon-fixed-width"></i> {{ doc.doc.name }}</li>
     </ul>
-	{% if not bean -%}
+	{% if not doc -%}
 		<script>ask_to_login();</script>
 	{% else %}
 	<hr>
-	{%- if bean.doc.status -%}
-	{% if bean.doc.status == "Waiting for Customer" -%}
+	{%- if doc.doc.status -%}
+	{% if doc.doc.status == "Waiting for Customer" -%}
 		{% set status = "To Reply" %}
 	{% else %}
-		{% set status = bean.doc.status %}
+		{% set status = doc.doc.status %}
 	{%- endif -%}
 	<div class="row">
 		<div class="col-md-2" style="margin-bottom: 7px;">
 			<span class="label {{ status_label.get(status) or 'label-default' }}">{{ status }}</span>
 		</div>
 		<div class="col-md-8">
-			<div class="row col-md-12">{{ bean.doc.subject }}</div>
+			<div class="row col-md-12">{{ doc.doc.subject }}</div>
 		</div>
 		<div class="col-md-2">
-			<span class="text-muted pull-right">{{ frappe.utils.formatdate(bean.doc.creation) }}</span>
+			<span class="text-muted pull-right">{{ frappe.utils.formatdate(doc.doc.creation) }}</span>
 		</div>
 	</div>
 	<div class="row">
@@ -47,12 +47,12 @@
 	</div>
 	<p id="ticket-alert" class="alert alert-danger" 
 		style="display: none;">&nbsp;</p>
-	{%- if bean.doclist.get({"doctype":"Communication"}) -%}
+	{%- if doc.get({"doctype":"Communication"}) -%}
 	<div>
 		<table class="table table-bordered table-striped" id="ticket-thread">
 			<tbody>
 				{%- for comm in 
-					(bean.doclist.get({"doctype":"Communication"})|sort(reverse=True, attribute="creation")) %}
+					(doc.get({"doctype":"Communication"})|sort(reverse=True, attribute="creation")) %}
 				<tr>
 					<td>
 					<h5 style="text-transform: none">
@@ -96,7 +96,7 @@ $(document).ready(function() {
 				type: "POST",
 				method: "shopping_cart.templates.pages.ticket.add_reply",
 				btn: this,
-				args: { ticket: "{{ bean.doc.name }}", message: reply },
+				args: { ticket: "{{ doc.doc.name }}", message: reply },
 				callback: function(r) {
 					if(r.exc) {
 						msgprint(r._server_messages 
