--- a/shopping_cart/templates/pages/address.html
+++ b/shopping_cart/templates/pages/address.html
@@ -5,25 +5,27 @@
 {% block content %}
 {% macro render_fields(docfields) -%}
 {% for df in docfields -%}
-	{% if df.fieldtype in ["Data", "Link"] -%}
+	{% if df.fieldtype == "Data" -%}
 	<fieldset>
 		<label>{{ df.label }}</label>
-		<input class="form-control" type="text" placeholder="Type {{ df.label }}" 
+		<input class="form-control" type="text" placeholder="Type {{ df.label }}"
 			data-fieldname="{{ df.fieldname }}" data-fieldtype="{{ df.fieldtype }}"
 			{% if doc and doc.get(df.fieldname) -%} value="{{ doc[df.fieldname] }}" {%- endif %}>
 	</fieldset>
 	{% elif df.fieldtype == "Check" -%}
 	<fieldset class="checkbox">
-		<label><input type="checkbox" data-fieldname="{{ df.fieldname }}" 
-			data-fieldtype="{{ df.fieldtype }}" 
-			{% if doc and frappe.utils.cint(doc.get(df.fieldname)) -%} checked="checked" {%- endif %}> 
+		<label><input type="checkbox" data-fieldname="{{ df.fieldname }}"
+			data-fieldtype="{{ df.fieldtype }}"
+			{% if doc and frappe.utils.cint(doc.get(df.fieldname)) -%} checked="checked" {%- endif %}>
 			{{ df.label }}</label>
 	</fieldset>
-	{% elif df.fieldtype == "Select" -%}
+	{% elif df.fieldtype in ("Select", "Link") -%}
 	<fieldset>
+		{% set select_options = frappe.get_list(df.options)|map(attribute="name")
+			if df.fieldtype == "Link" else df.options.split("\n") %}
 		<label>{{ df.label }}</label>
 		<select class="form-control" data-fieldname="{{ df.fieldname }}" data-fieldtype="{{ df.fieldtype }}">
-			{% for value in df.options.split("\n") -%}
+			{% for value in select_options -%}
 			{% if doc and doc.get(df.fieldname) == value -%}
 			<option selected="selected">{{ value }}</option>
 			{% else -%}
@@ -43,7 +45,7 @@
     	<li class="active"><i class="icon-map-marker icon-fixed-width"></i> {{ title }}</li>
     </ul>
 	<h3><i class="icon-map-marker icon-fixed-width"></i> {{ title }}</h3>
-	<button type="button" class="btn btn-primary pull-right" id="address-save"><i class="icon-ok"></i> 
+	<button type="button" class="btn btn-primary pull-right" id="address-save"><i class="icon-ok"></i>
 		{{ doc and "Save" or "Insert" }}</button>
 	<div class="clearfix"></div>
 	<hr>
@@ -65,7 +67,7 @@
 	$(document).ready(function() {
 		bind_save();
 	});
-	
+
 	var bind_save = function() {
 		$("#address-save").on("click", function() {
 			var fields = {
@@ -76,14 +78,14 @@
 				var $input = $(input);
 				var fieldname = $(input).attr("data-fieldname");
 				var fieldtype = $(input).attr("data-fieldtype");
-				
+
 				if(fieldtype == "Check") {
 					fields[fieldname] = $input.is(":checked") ? 1 : 0;
 				} else {
 					fields[fieldname] = $input.val();
 				}
 			});
-			
+
 			frappe.call({
 				btn: $(this),
 				type: "POST",
@@ -95,7 +97,7 @@
 						if(r._server_messages) {
 							msg = JSON.parse(r._server_messages || []).join("<br>");
 						}
-						
+
 						$("#address-error")
 							.html(msg || "Something went wrong!")
 							.toggle(true);
