--- a/shopping_cart/templates/includes/sale.html
+++ b/shopping_cart/templates/includes/sale.html
@@ -2,20 +2,20 @@
     <ul class="breadcrumb">
     	<li><a href="index">Home</a></li>
     	<li><a href="{{ parent_link }}">{{ parent_title }}</a></li>
-    	<li class="active"><i class="icon-file icon-fixed-width"></i> {{ doc.doc.name }}</li>
+    	<li class="active"><i class="icon-file icon-fixed-width"></i> {{ doc.name }}</li>
     </ul>
-	<h3><i class="icon-file icon-fixed-width"></i> {{ doc.doc.name }}</h3>
-	{% if doc.doc.name == "Not Allowed" -%}
+	<h3><i class="icon-file icon-fixed-width"></i> {{ doc.name }}</h3>
+	{% if doc.name == "Not Allowed" -%}
 		<script>ask_to_login();</script>
 	{% else %}
 	<hr>
 	<div>
 	<div class="row">
 		<div class="col-xs-6">
-			{% if doc.doc.status -%}{{ doc.doc.status }}{%- endif %}
+			{% if doc.status -%}{{ doc.status }}{%- endif %}
 		</div>
 		<div class="col-xs-6">
-			<span class="pull-right">{{ frappe.utils.formatdate(doc.doc.posting_date or doc.doc.transaction_date) }}</span>
+			<span class="pull-right">{{ frappe.utils.formatdate(doc.posting_date or doc.transaction_date) }}</span>
 		</div>
 	</div>
 	<br>
@@ -32,15 +32,15 @@
 					<th>Basic Rate</th>
 					<th>Amount</th>
 				</tr>
-				{%- for row in doc.get({"doctype": doc.doc.doctype + " Item"}) %}
+				{%- for row in doc.get({"doctype": doc.doctype + " Item"}) %}
 				<tr>
 					<td style="width: 3%;">{{ row.idx }}</td>
 					<td style="width: 20%;">{{ row.item_name }}</td>
 					<td style="width: 37%;">{{ row.description }}</td>
 					<td style="width: 5%; text-align: right;">{{ row.qty }}</td>
 					<td style="width: 5%;">{{ row.stock_uom }}</td>
-					<td style="width: 15%; text-align: right;">{{ frappe.utils.fmt_money(row.rate, currency=doc.doc.currency) }}</td>
-					<td style="width: 15%; text-align: right;">{{ frappe.utils.fmt_money(row.amount, currency=doc.doc.currency) }}</td>
+					<td style="width: 15%; text-align: right;">{{ frappe.utils.fmt_money(row.rate, currency=doc.currency) }}</td>
+					<td style="width: 15%; text-align: right;">{{ frappe.utils.fmt_money(row.amount, currency=doc.currency) }}</td>
 				</tr>
 				{% endfor -%}
 			</tbody>
@@ -55,24 +55,24 @@
 			<tr>
 				<td>Net Total</td>
 				<td width=40% style="text-align: right;">{{
-					frappe.utils.fmt_money(doc.doc.net_total/doc.doc.conversion_rate, currency=doc.doc.currency)
+					frappe.utils.fmt_money(doc.net_total/doc.conversion_rate, currency=doc.currency)
 				}}</td>
 			</tr>
 			{%- for charge in doc.get({"doctype":"Sales Taxes and Charges"}) -%}
 			{%- if not charge.included_in_print_rate -%}
 			<tr>
 				<td>{{ charge.description }}</td>
-				<td style="text-align: right;">{{ frappe.utils.fmt_money(charge.tax_amount / doc.doc.conversion_rate, currency=doc.doc.currency) }}</td>
+				<td style="text-align: right;">{{ frappe.utils.fmt_money(charge.tax_amount / doc.conversion_rate, currency=doc.currency) }}</td>
 			</tr>
 			{%- endif -%}
 			{%- endfor -%}
 			<tr>
 				<td>Grand Total</td>
-				<td style="text-align: right;">{{ frappe.utils.fmt_money(doc.doc.grand_total_export, currency=doc.doc.currency) }}</td>
+				<td style="text-align: right;">{{ frappe.utils.fmt_money(doc.grand_total_export, currency=doc.currency) }}</td>
 			</tr>
 			<tr style='font-weight: bold'>
 				<td>Rounded Total</td>
-				<td style="text-align: right;">{{ frappe.utils.fmt_money(doc.doc.rounded_total_export, currency=doc.doc.currency) }}</td>
+				<td style="text-align: right;">{{ frappe.utils.fmt_money(doc.rounded_total_export, currency=doc.currency) }}</td>
 			</tr>
 		</tbody>
 		</table>	
