--- a/shopping_cart/templates/pages/invoice.html
+++ b/shopping_cart/templates/pages/invoice.html
@@ -1,6 +1,6 @@
-{% block title %} {{ doc.doc.name }} {% endblock %}
+{% block title %} {{ doc.name }} {% endblock %}
 
-{% block header %}<h2>{{ doc.doc.name }}</h2>{% endblock %}
+{% block header %}<h2>{{ doc.name }}</h2>{% endblock %}
 
 {% block content%}{% include "templates/includes/sale.html" %}{% endblock %}
 
