--- a/shopping_cart/templates/pages/ticket.html
+++ b/shopping_cart/templates/pages/ticket.html
@@ -13,27 +13,27 @@
     <ul class="breadcrumb">
     	<li><a href="index">Home</a></li>
     	<li><a href="tickets">My Tickets</a></li>
-    	<li class="active"><i class="icon-ticket icon-fixed-width"></i> {{ doc.doc.name }}</li>
+    	<li class="active"><i class="icon-ticket icon-fixed-width"></i> {{ doc.name }}</li>
     </ul>
 	{% if not doc -%}
 		<script>ask_to_login();</script>
 	{% else %}
 	<hr>
-	{%- if doc.doc.status -%}
-	{% if doc.doc.status == "Waiting for Customer" -%}
-		{% set status = "To Reply" %}
-	{% else %}
-		{% set status = doc.doc.status %}
-	{%- endif -%}
+	{%- if doc.status -%}
+		{% if doc.status == "Waiting for Customer" -%}
+			{% set status = "To Reply" %}
+		{% else %}
+			{% set status = doc.status %}
+		{%- endif -%}
 	<div class="row">
 		<div class="col-md-2" style="margin-bottom: 7px;">
 			<span class="label {{ status_label.get(status) or 'label-default' }}">{{ status }}</span>
 		</div>
 		<div class="col-md-8">
-			<div class="row col-md-12">{{ doc.doc.subject }}</div>
+			<div class="row col-md-12">{{ doc.subject }}</div>
 		</div>
 		<div class="col-md-2">
-			<span class="text-muted pull-right">{{ frappe.utils.formatdate(doc.doc.creation) }}</span>
+			<span class="text-muted pull-right">{{ frappe.utils.formatdate(doc.creation) }}</span>
 		</div>
 	</div>
 	<div class="row">
@@ -45,13 +45,12 @@
 				  <i class="icon-arrow-right icon-fixed-width"></i> Send</button>
 		</div>
 	</div>
-	<p id="ticket-alert" class="alert alert-danger" 
+	<p id="ticket-alert" class="alert alert-danger"
 		style="display: none;">&nbsp;</p>
-	{%- if doc.get({"doctype":"Communication"}) -%}
 	<div>
 		<table class="table table-bordered table-striped" id="ticket-thread">
 			<tbody>
-				{%- for comm in 
+				{%- for comm in
 					(doc.get({"doctype":"Communication"})|sort(reverse=True, attribute="creation")) %}
 				<tr>
 					<td>
@@ -66,9 +65,6 @@
 			</tbody>
 		</table>
 	</div>
-	{%- else -%}
-	<div class="alert">No messages</div>
-	{%- endif -%}
 	{%- endif -%}
 	{% endif -%}
 </div>
@@ -86,7 +82,7 @@ $(document).ready(function() {
 			$("#ticket-reply-send").removeClass("hide");
 		}
 	});
-	
+
 	$("#ticket-reply-send").on("click", function() {
 		var reply = $("#ticket-reply-editor").find("textarea").val().trim();
 		if(!reply) {
@@ -96,10 +92,10 @@ $(document).ready(function() {
 				type: "POST",
 				method: "shopping_cart.templates.pages.ticket.add_reply",
 				btn: this,
-				args: { ticket: "{{ doc.doc.name }}", message: reply },
+				args: { ticket: "{{ doc.name }}", message: reply },
 				callback: function(r) {
 					if(r.exc) {
-						msgprint(r._server_messages 
+						msgprint(r._server_messages
 							? JSON.parse(r._server_messages).join("<br>")
 							: "Something went wrong!");
 					} else {
