--- a/shopping_cart/templates/pages/ticket.html
+++ b/shopping_cart/templates/pages/ticket.html
@@ -111,4 +111,6 @@ var msgprint = function(txt) {
 	if(txt) $("#ticket-alert").html(txt).toggle(true);
 }
 </script>
+
+<!-- no-sidebar -->
 {% endblock %}
