--- a/shopping_cart/templates/pages/user.html
+++ b/shopping_cart/templates/pages/user.html
@@ -52,6 +52,6 @@ $(document).ready(function() {
 	})
 })
 </script>
+<!-- no-sidebar -->
 {% endblock %}
 
-{% block sidebar %}{% include "templates/includes/sidebar.html" %}{% endblock %}
