--- a/shopping_cart/templates/pages/cart.html
+++ b/shopping_cart/templates/pages/cart.html
@@ -33,7 +33,7 @@
 			<div class="row">
 				<div class="col-md-6">
 					<h4>Shipping Address</h4>
-					<div id="cart-shipping-address" class="panel-group" 
+					<div id="cart-shipping-address" class="panel-group"
 						data-fieldname="shipping_address_name"></div>
 					<button class="btn btn-default" type="button" id="cart-add-shipping-address">
 						<span class="icon icon-plus"></span> New Shipping Address</button>
@@ -51,6 +51,7 @@
 		<p class="pull-right"><button class="btn btn-success btn-place-order" type="button">Place Order</button></p>
 	</div>
 </div>
+
+<!-- no-sidebar -->
 {% endblock %}
 
-{% block sidebar %}{% include "templates/includes/sidebar.html" %}{% endblock %}
