--- a/shopping_cart/templates/pages/tickets.html
+++ b/shopping_cart/templates/pages/tickets.html
@@ -16,7 +16,7 @@
 		doc.status = doc.status.trim();
 		doc.label_class = status_label[doc.status] || "label-default";
 		if(doc.status==="Waiting for Customer") doc.status = "To Reply";
-	
+
 		$(repl('<a href="{{ page }}?name=%(name)s" class="list-group-item">\
 				<div class="row">\
 					<div class="col-md-2" style="margin-bottom: 7px;"><span class="label %(label_class)s">\
@@ -31,8 +31,8 @@
 				</div>\
 			</a>', doc)).appendTo($list);
 	};
-	
-	$(document).ready(function() {
+
+	frappe.ready(function() {
 		if(!window.$new_ticket) {
 			window.$new_ticket = $('<div>\
 					<button class="btn btn-primary" style="margin-bottom: 15px;" id="new-ticket">\
@@ -43,7 +43,7 @@
 					</button>\
 				</div>').insertBefore(".transaction-list");
 		}
-		
+
 		window.$new_ticket.find("#new-ticket").on("click", function() {
 			$(this).addClass("hide");
 			$(window.$new_ticket).find("#new-ticket-send").removeClass("hide");
@@ -56,7 +56,7 @@
 				</div>')
 				.insertAfter(window.$new_ticket);
 		});
-		
+
 		window.$new_ticket.find("#new-ticket-send").on("click", function() {
 			var subject = $("#ticket-editor").find('[data-fieldname="subject"]').val().trim();
 			var message = $("#ticket-editor").find('[data-fieldname="message"]').val().trim();
@@ -70,7 +70,7 @@
 					args: { subject: subject, message: message },
 					callback: function(r) {
 						if(r.exc) {
-							msgprint(r._server_messages 
+							msgprint(r._server_messages
 								? JSON.parse(r._server_messages).join("<br>")
 								: "Something went wrong!");
 						} else {
@@ -81,12 +81,12 @@
 			}
 		});
 	});
-	
+
 	var msgprint = function(txt) {
 		if(txt) $("#msgprint-alert").html(txt).toggle(true);
 	}
 </script>
 
+<!-- no-sidebar -->
 {% endblock %}
 
-{% block sidebar %}{% include "templates/includes/sidebar.html" %}{% endblock %}
