--- a/shopping_cart/templates/includes/sale.html
+++ b/shopping_cart/templates/includes/sale.html
@@ -5,7 +5,7 @@
     	<li class="active"><i class="icon-file icon-fixed-width"></i> {{ doc.name }}</li>
     </ul>
 	<h3><i class="icon-file icon-fixed-width"></i> {{ doc.name }}</h3>
-	{% if doc.name == "Not Allowed" -%}
+	{% if doc.name == _("Not Allowed") -%}
 		<script>ask_to_login();</script>
 	{% else %}
 	<hr>
